# avagodsy.github.io

./: .nojekyll  README.md  _quarto.yml  about.html  index.html  index.qmd  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
Assignment 01/: system_info.docx  system_info.qmd
_site/: about.html  index.html
